[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palindrome_chikari"
version = "0.0.1"
authors = [
  { name="Marshall Chikari", email="marshall.chikari@gmail.com" },
]
description = "A small package of a palindrome tester"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gitnyasha/palindrome-chikari"
"Bug Tracker" = "https://github.com/gitnyasha/palindrome-chikari/issues"
